# LiteLighting

./: .gitignore  CMakeLists.txt  main.cpp  showfile.json  showfile_busking.json
include/classes/: Fixture.h
include/forms/: mainwindow.ui
include/light_headers/: ChannelTypeEnum.h  CircuitBreaker.h  CustomTypeEnum.cpp  CustomTypeEnum.h  DmxGateway.h  Fixture.h  FixtureArray.h  FixtureGroup.h  Mediator.h  Patcher.h  Uploader.h
include/light_headers/fixture_array_delegates/: universeaddressdelegate.cpp  universeaddressdelegate.h
include/light_headers/programming_command/: AbstractCommand.h  CommandArray.h  abstractcommand.h
include/qt_headers/: mainwindow.cpp  mainwindow.h
include/qt_headers/control_panel/: controlpanel.cpp  controlpanel.h
include/qt_headers/control_panel/btn_property_type/: buttonpropertytype.cpp  buttonpropertytype.h
include/qt_headers/control_panel/stacked_widget_properties/: stackedwidgetproperty.cpp  stackedwidgetproperty.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/: fixtureproperty.cpp  fixtureproperty.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/button_widget/: buttonvalue.cpp  buttonvalue.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/button_widget/modal_window/: qdialogsetter.cpp  qdialogsetter.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/button_widget/name_property/: labelnameproperty.cpp  labelnameproperty.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/button_widget/value_property/: buttonvalueproperty.cpp  buttonvalueproperty.h
include/qt_headers/control_panel/stacked_widget_properties/fixture_property/scroll_bar_widget/: scrollbarvalue.cpp  scrollbarvalue.h
include/qt_headers/main_window/: mainwindow.cpp  mainwindow.h
include/qt_headers/main_window/fixture_display/: fixturedisplay.h  fixtureproperties.cpp  fixtureproperties.h
include/qt_headers/main_window/fixture_display/fixture_button/: fixturebutton.h
include/qt_headers/main_window/fixture_display/fixture_display_button/: fixturebutton.cpp
include/qt_headers/main_window/fixture_display/fixture_properties_widget/position_widget/: positionwidget.cpp  positionwidget.h
include/qt_headers/main_window/fixture_display/fixture_properties_widget/position_widget/subwidgets/: followmodebutton.cpp  followmodebutton.h  positionbutton.cpp  positionbutton.h  positionchart.cpp  positionchart.h
include/qt_headers/main_window/main_settings/patching_window/: qdialoghelper.cpp  qdialoghelper.h  qdialogpatching.cpp  qdialogpatching.h
include/qt_headers/middle_panel/: middlepanel.cpp  middlepanel.h
include/qt_headers/middle_panel/busking/: buskingwindow.cpp  buskingwindow.h
include/qt_headers/middle_panel/busking/busking_view/: buskingview.cpp  buskingview.h
include/qt_headers/middle_panel/busking/busking_view/fixture_display_button/: breakerbutton.cpp  breakerbutton.h  fixturebutton.cpp  fixturebutton.h  socketbutton.cpp  socketbutton.h
include/qt_headers/middle_panel/busking/busking_view/fixture_display_button/modal_window/: qdialogsocket.cpp  qdialogsocket.h
include/qt_headers/middle_panel/busking/fixture_display/: fixturedisplay.h  fixtureproperties.h
include/qt_headers/middle_panel/busking/fixture_display/fixture_display_button/: fixturebutton.h
include/qt_headers/middle_panel/busking/fixture_display/fixture_properties_widget/position_widget/: positionwidget.h
include/qt_headers/middle_panel/busking/fixture_display/fixture_properties_widget/position_widget/subwidgets/: followmodebutton.h  positionchart.h
include/qt_headers/middle_panel/executors&buttons/: execbuttonswindow.cpp  execbuttonswindow.h
include/qt_headers/middle_panel/patch_sheet/: patchsheetwindow.cpp  patchsheetwindow.h
include/qt_headers/middle_panel/patch_sheet/patching_modal_window/: qdialogpatching.cpp  qdialogpatching.h
include/qt_headers/middle_panel/programming/: programmingwindow.cpp  programmingwindow.h
include/qt_headers/middle_panel/programming/scroll_area_widget/: scrollareawidget.cpp  scrollareawidget.h
include/qt_headers/middle_panel/programming/scroll_area_widget/buttons/: groupbutton.cpp  groupbutton.h  programmingbutton.cpp  programmingbutton.h  typebutton.cpp  typebutton.h
include/qt_headers/middle_panel/programming/scroll_area_widget/buttons/command_modal_window/: qdialogcommand.cpp
include/qt_headers/middle_panel/programming/scroll_area_widget/buttons/modal_windows/: qdialogcommand.cpp  qdialogcommand.h  qdialogeditor.cpp  qdialogeditor.h  qdialoggrouping.cpp  qdialoggrouping.h
include/qt_headers/middle_panel/settings/: settingswindow.cpp  settingswindow.h
include/qt_headers/pages_panel/: pagespanel.cpp  pagespanel.h
include/qt_headers/pages_panel/busking/fixture_display/: fixturedisplay.cpp
include/qt_headers/pages_panel/busking/fixture_display/fixture_properties_widget/position_widget/subwidgets/: positionbutton.h
include/qt_headers/pages_panel/pages_button/: pagesbutton.cpp  pagesbutton.h
include/qt_headers/settings_panel/: settingspanel.cpp  settingspanel.h
include/styles/: buttonstyle.cpp  buttonstyle.h  color_constants.h  main_style.h
include/styles/main/: main_palette.h  main_style.qss
lib/: CMakeLists.txt
res/: photos.qrc
src/: Fixture.cpp  main.cpp
src/classes/: Fixture.cpp
src/light_src/: CircuitBreaker.cpp  CustomTypeEnum.cpp  DmxGateway.cpp  Fixture.cpp  FixtureArray.cpp  FixtureGroup.cpp  Patcher.cpp
src/light_src/fixture_array_delegates/: universeaddressdelegate.cpp
src/light_src/programming_command/: AbstractCommand.cpp  CommandArray.cpp  abstractcommand.cpp
src/qt_src/: mainwindow.cpp
