add_library(lIBR_OLA libola.a libolaartnet.a libolaartnetconf.a libolacommon.a liboladummy.a libolae131.a libolae131conf.a libolaespnet.a libolaftdidmx.a libolagpio.a libolagpiocore.a libolakarate.a libolakinet.a libolamilinst.a libolaopendmx.a libolaopenpixelcontrol.a libolaosc.a libolapathport.a libolarenard.a libolasandnet.a libolaserver.a libolaserverplugininterface.a libolashownet.a libolaspi.a libolaspicore.a libolastageprofi.a libolatrigger.a libolauartdmx.a libolausbdmx.a libolausbpro.a libolausbproconf.a)
